@@ -117,6 +117,7 @@ CONF.HASH_OPTIMIZE = true
 # CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
 ##CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 10000
+#CONF.MOD_GROUP_BY_CMSB_CHUNK_SIZE = 1000
 
 ##CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 # CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
